--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,21 +1,21 @@
 .main-container{
     height: 95vh;
-    width: 100vw;
+    width: 95vw;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-
 }
 
-form{
+/* form{
     display: flex;
     flex-direction: column;
     height: 400px;
     width: 400px;
     align-items: center;
     margin: auto;
-}
+    background-color: #00ff00;
+} */
 
 .form-items{
     align-items: center;
