--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,26 +1,21 @@
-.main-container{
-    height: 95vh;
-    width: 100vw;
-    background-color: #ff0000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-
-
+.main-container {
+  height: 95vh;
+  width: 100vw;
+  /* background-color: #ff0000; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-form{
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    width: 400px;
-    align-items: center;
-    margin: auto;
-    background-color: #00ff00;
+form {
+  display: flex;
+  flex-direction: column;
+
+  margin: auto;
+  /* background-color: #00ff00; */
 }
 
-.form-items{
-    align-items: center;
-    padding: 20%;
+.form-items {
+  align-items: center;
+  padding: 20%;
 }
