--- a/src/components/Pages/Entry/Entry.css
+++ b/src/components/Pages/Entry/Entry.css
@@ -1,7 +1,5 @@
-button,
-input,
-optgroup,
-select,
-textarea {
-  border-radius: 20px;
+.Entry-form {
+  display: 'flex';
+  gap: '2em';
+  flex-direction: column;
 }
