--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,3 +1,16 @@
 .active {
   color: blue !important ;
 }
+.Nav-Container {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  height: 100vh;
+}
+
+.Nav-Container-items {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  gap: 2em;
+}
