--- a/src/components/Pages/Entry/Entry.css
+++ b/src/components/Pages/Entry/Entry.css
@@ -1,5 +1,9 @@
 .form-input {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10%;
+  justify-content: center;
 }
 .Pateient-detail {
   display: flex;
@@ -9,8 +13,8 @@
   align-items: center;
   justify-content: center;
   background-color: #1ebfc4;
-  border-radius: 20px;
-  padding: 40px;
+  border-radius: 30px;
+  padding: 60px;
 }
 
 .Pateient-detail-1 {
