--- a/src/components/Pages/Dashboard/Dashboard.css
+++ b/src/components/Pages/Dashboard/Dashboard.css
@@ -2,6 +2,13 @@
   width: 350px;
   margin-top: 30px;
   align-items: center;
+  border: none;
+}
+.cardd-bottom {
+  width: 350px;
+  margin-top: 30px;
+  align-items: center;
+  border: none;
 }
 
 .card-body {
@@ -13,3 +20,12 @@
   height: 100px;
   border-radius: 30px;
 }
+/* .DashBoard-Card-bottom {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 2em;
+  height: 10%;
+  border-radius: 30px;
+} */
