--- a/src/components/Pages/Dashboard/Dashboard.css
+++ b/src/components/Pages/Dashboard/Dashboard.css
@@ -2,11 +2,13 @@
   width: 350px;
   margin-top: 30px;
   align-items: center;
+
   border: none;
 }
 .cardd-bottom {
-  width: 350px;
-  margin-top: 30px;
+  width: 150px;
+  margin-top: 50px;
+
   align-items: center;
   border: none;
 }
@@ -15,17 +17,32 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   gap: 2em;
   height: 100px;
   border-radius: 30px;
 }
-/* .DashBoard-Card-bottom {
-  width: 30%;
+
+.card-down {
+  width: 200px;
+  margin-top: 90px;
+
+  border: none;
+}
+
+.card-down-inside {
+  width: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  gap: 2em;
-  height: 10%;
+
+  height: 80px;
   border-radius: 30px;
-} */
+}
+
+.Record-Contaier {
+  /* background-color: aquamarine; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
+}
